# dicom_download_cli

./: .gitignore  CLAUDE.md  README.md  dicom_download.md  dicom_download.py
.cursor/rules/: linus-torvalds.mdc
.cursor/skills/dicom-download-cli/: SKILL.md
dicom_download_cli/: Cargo.toml
dicom_download_cli/config/: Untitled-1.json  dicom_download_cli.toml
dicom_download_cli/src/: Untitled  checker.rs  client.rs  config.rs  converter.rs  main.rs  processor.rs
docs/: dcm2niix_integration.md  dicom_download.md  download_dicom_async.md  download_dicom_matt_async.md
scripts/: download_dicom_async.py  download_dicom_matt_async.py
